# ChangeLog for app-arch/unzip
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/unzip/ChangeLog,v 1.56 2008/03/29 16:57:06 jer Exp $

  29 Mar 2008; Jeroen Roovers <jer@gentoo.org> unzip-5.52-r2.ebuild:
  Stable for HPPA (bug #213761).

  29 Mar 2008; Raúl Porcel <armin76@gentoo.org> unzip-5.52-r2.ebuild:
  alpha/ia64/sparc stable wrt security #213761

  29 Mar 2008; Brent Baude <ranger@gentoo.org> unzip-5.52-r2.ebuild:
  Marking unzip-5.52-r2 ppc64 and ppc for bug 213761

  29 Mar 2008; Christian Faulhammer <opfer@gentoo.org> unzip-5.52-r2.ebuild:
  stable x86, security bug 213761

  29 Mar 2008; Robert Buchholz <rbu@gentoo.org> unzip-5.52-r2.ebuild:
  amd64 stable, bug 213761

*unzip-5.52-r2 (29 Mar 2008)

  29 Mar 2008; Mike Frysinger <vapier@gentoo.org>
  +files/unzip-5.52-CVE-2008-0888.patch, +unzip-5.52-r2.ebuild:
  Fix for CVE-2008-0888 #213761.

  08 Feb 2008; Dawid Węgliński <cla@gentoo.org> unzip-5.52-r1.ebuild:
  Change SRC_URI as the old url wasn't fetchable

  06 Oct 2007; Mike Frysinger <vapier@gentoo.org> unzip-5.52-r1.ebuild:
  Fix from Paul Bredbury to make sure we respect CPPFLAGS #194264.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  07 Jan 2007; Harald van Dĳk <truedfx@gentoo.org> unzip-5.52-r1.ebuild:
  Handle NetBSD CHOST and properly check for x86 for other BSDs

  24 Oct 2006; Roy Marples <uberlord@gentoo.org> unzip-5.52-r1.ebuild:
  Don't assume that freebsd == i386 :)
  Added ~sparc-fbsd keyword.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> unzip-5.52-r1.ebuild:
  Marked stable on mips.

  18 Aug 2006; Bryan Østergaard <kloeri@gentoo.org> unzip-5.52-r1.ebuild:
  Stable on alpha.

  16 Aug 2006; Markus Rothe <corsair@gentoo.org> unzip-5.52-r1.ebuild:
  Stable on ppc64

  09 Aug 2006; Danny van Dyk <kugelfang@gentoo.org> unzip-5.52-r1.ebuild:
  Marked stable on amd64.
